2008-07-07  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/text/DateFormatSymbols.java:
	Use metazones to convert metazone names to standard
	Continent/City form.  Also add hack to include GMT
	as a short name.
	* resource/java/text/metazones.properties:
	New properties file for mapping metazones to standard
	zone names.
	
2008-07-07  Christian Thalinger  <twisti@complang.tuwien.ac.at>

	* configure.ac (AC_CHECK_HEADERS): Added sys/sockio.h, required
	for Solaris.
	(AC_CHECK_LIB): Check for socket.
	* native/jni/java-net/java_net_VMNetworkInterface.c (unistd.h):
	Added.
	[HAVE_SYS_SOCKIO_H] (sys/sockio.h): Likewise.

2008-07-07  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* THANKYOU: Added Byeogncheol.

2008-07-07  Byeogncheol Lee  <lineonking@gmail.com>

	PR classpath/36677:
	* gnu/classpath/jdwp/processor/VirtualMachineCommandSet.java:
	(executeTopLevelThreadGroups(ByteBuffer,DataOutputStream)):
	Add missing write.

2008-07-07  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/text/DateFormatSymbols.java:
	(getZoneStrings(ResourceBundle,Locale)):
	Pad arrays smaller than 5 with empty strings.

2008-07-07  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/util/Calendar.java:
	(Calendar(TimeZone,Locale)): Use weeks.properties
	instead of LocaleInformation bundles.
	* resource/java/util/iso4217.properties:
	Updated with new supplementgen header.
	* resource/java/util/weeks.properties:
	New resource file.

2008-07-07  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* resource/gnu/java/locale/LocaleInformation.properties,
	* resource/gnu/java/locale/LocaleInformation_aa.properties,
	* resource/gnu/java/locale/LocaleInformation_af.properties,
	* resource/gnu/java/locale/LocaleInformation_af_NA.properties,
	* resource/gnu/java/locale/LocaleInformation_ak.properties,
	* resource/gnu/java/locale/LocaleInformation_am.properties,
	* resource/gnu/java/locale/LocaleInformation_ar.properties,