@@ -1,6 +1,13 @@
 2008-07-07  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* java/text/DateFormatSymbols.java:
+	(getZoneStrings(ResourceBundle,Locale)):
+	Fallback on to parent locales.
+
+2008-07-07  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* java/text/DateFormatSymbols.java:
+	(getZoneStrings(ResourceBundle,Locale)):
 	Use metazones to convert metazone names to standard
 	Continent/City form.  Also add hack to include GMT
 	as a short name.
